--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -127,7 +127,7 @@ jobs:
       run: |
         cd openwrt/bin/targets/*/*
         mkdir -p release
-        mv  *.gz openwrt/release/ && cd release
+        mv -f *.gz openwrt/release/ && cd release
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
