--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -58,16 +58,16 @@ jobs:
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
-        sudo mkdir -p /workdir
-        sudo chown $USER:$GROUPS /workdir
+        # sudo mkdir -p /workdir
+        # sudo chown $USER:$GROUPS /workdir
 
     - name: Clone source code
-      working-directory: /workdir
+      working-directory: $GITHUB_WORKSPACE/openwrt
       run: |
         df -hT $PWD
         test -d openwrt || git clone $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt && git pull
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        # ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
 
     - name: Load custom feeds
       run: |
